--- a/phongkham-app/src/App.css
+++ b/phongkham-app/src/App.css
@@ -174,3 +174,64 @@ footer ul li a {
   text-decoration: none;
   color: black;
 }
+
+.register {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.register form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.register input:focus{
+  outline: none;
+}
+
+.register input[type="text"],
+.register input[type="password"],
+.register input[type="file"] {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+  border: none;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  border: 2px solid #ddd;
+  border-radius: 6px;
+}
+
+.register button {
+  background-color: #0077be;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.register span {
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.register span.err{
+  font-size: 12px;
+  font-weight: normal;
+}
+
+.register span.valid{
+  display: none;
+}
+
